--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="landing-container">
         <div class="album-cover">
             <div class="cover">
-                <img src="img/Us.PNG" alt="Our Story Cover">
+                <img src="img/Us.jpg" alt="Our Story Cover">
             </div>
 
             <div class="vinyl">
