--- a/Flipbook.html
+++ b/Flipbook.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="photo-frame">
-                    <img id="carousel-image" src="img/img1.jpg" alt="Our Memory">
+                    <img id="carousel-image" src="img/img1.jpeg" alt="Our Memory" loading="eager" decoding="async">
                 </div>
 
                 <div class="caption-container">
